Fixed paragraph alignment, styled buttons and top nav text colour changes

--- a/css/custom.css
+++ b/css/custom.css
@@ -82,6 +82,11 @@ container-fluid {
 	
 }
 
+.listitem:hover{
+	color:#FFBEAD;
+	
+}
+
 .alright {
 	text-align:right;
 }
@@ -94,6 +99,19 @@ container-fluid {
 
 .rightimage img{
 	width:100%;
+}
+button {
+	
+	background-color:#BE1A38;
+	border: solid;
+	color:antiquewhite;
+	padding:10px 30px;
+	cursor:pointer;
+}
+
+button:hover{
+	background-color:antiquewhite;
+	color:#BE1A38;
 }
 
 @media all and (max-width: 600px) {
